--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,7 @@
 html(lang=de)
 	head
 		title Christoph Franke
-		link(rel="stylesheet" href="style.css")
+		link(rel="stylesheet" href="/style.css")
 	body
 		include:markdown ../content/index.md
+		script(type="text/javascript" src="/main.js")
